# foptim

./: .clang-format  .clang-tidy  .gitignore  .ignore  CMakeLists.txt  LICENSE  README.md  ReadMe.txt  driver.sh  flake.nix  todo.txt
bench/: adobe_loop_unroll.cpp  adobe_ty_constfold.cpp  embench_libsichneu.c  embench_libst.c  embench_libstatemate.c  embench_libud.c  embench_main.h  embench_matmult_int.c  embench_nbody.c  embench_primecount.c  embench_tarfind.c  fib.c  formilab_fbench.cpp  llvm_benchmark_adobe_cpp_function_objects.cpp  llvm_benchmark_adobe_cpp_stepanov_vectors.cpp  llvm_gcc_loops.cpp  llvm_stanford_treesort.cpp  lu_decomp.cpp  mandelbort.cpp  matmul.cpp  nn.cpp  prime_sieve.cpp
bench/Output/: 2025_06_14_17_20_perf.json  2025_06_15_09_22_perf.json  2025_06_20_21_50_perf.json  2025_06_21_10_25_perf.json  2025_06_21_13_41_perf.json  2025_06_22_11_11_perf.json  2025_06_27_20_44_perf.json  2025_06_28_10_47_perf.json  2025_06_28_15_08_perf.json  2025_06_28_22_09_perf.json  2025_06_29_12_06_perf.json  2025_07_04_20_18_perf.json  2025_07_10_09_43_perf.json  2025_07_10_11_05_perf.json  2025_07_11_21_44_perf.json  2025_07_12_18_10_perf.json  2025_07_13_22_00_perf.json  2025_07_20_22_27_perf.json  2025_07_27_19_17_perf.json  2025_07_30_10_54_perf.json  2025_08_03_21_54_perf.json  2025_08_05_13_26_perf.json  2025_08_05_15_46_perf.json  2025_08_05_20_32_perf.json  2025_08_13_21_59_perf.json  2025_08_17_19_57_perf.json  2025_08_20_12_21_perf.json  2025_09_17_19_02_perf.json  2025_09_22_15_27_perf.json  2025_09_22_16_44_perf.json  2025_09_23_12_43_perf.json  2025_09_24_13_38_perf.json  2025_09_25_09_15_perf.json  2025_09_30_13_32_perf.json  2025_10_01_15_16_perf.json  2025_10_08_14_40_perf.json  2025_10_09_12_49_perf.json  2025_10_09_13_13_perf.json  2025_10_10_21_51_perf.json  2025_10_11_15_26_perf.json  (+15 more)
scripts/: bench_display.py  bench_display_single.py  bench_record.py  min_perf.sh  minimize.sh  minimize_output.sh  minimize_perf.sh
src/: default.toml  main.cpp  testconf.toml
src/arg_parsing/: compiler_config.cpp  compiler_config.hpp  compiler_passes.hpp  fir_pipeline.hpp  parser.cpp  parser.hpp
src/config/: compiler_config.cpp  compiler_config.hpp  compiler_mir_passes.hpp  compiler_passes.hpp  default.toml  fast_math.toml
src/ir/: IRLocation.hpp  attributable.cpp  attributable.hpp  attribute.hpp  basic_block.cpp  basic_block.hpp  basic_block_arg.cpp  basic_block_arg.hpp  basic_block_ref.cpp  basic_block_ref.hpp  builder.cpp  builder.hpp  constant_value.cpp  constant_value.hpp  constant_value_ref.hpp  context.cpp  context.hpp  function.cpp  function.hpp  function_ref.hpp  global.cpp  global.hpp  helpers.cpp  helpers.hpp  instruction.cpp  instruction.hpp  instruction_data.cpp  instruction_data.hpp  storage.hpp  types.cpp  types.hpp  types_ref.hpp  use.cpp  use.hpp  value.cpp  value.hpp
src/ir/interpreter/: interpreter.cpp  interpreter.hpp
src/llvm/: llir_loader.cpp  llir_loader.hpp
src/mir/: dag.hpp  func.hpp  global.hpp  instr.cpp  instr.hpp  legalize_bb_form.hpp  matcher.cpp  matcher.hpp  matcher_helpers.cpp  matcher_helpers.hpp  matcher_patterns.cpp  matcher_patterns.hpp  reg_alloc.cpp  reg_alloc.hpp
src/optim/: fir_pipeline.cpp  fir_pipeline.hpp  function_pass.hpp  module_pass.hpp
src/test/: bitset.hpp  stable_vec.hpp  test_bitset.hpp  test_general.hpp  test_int128.hpp  test_ir_liveness.hpp  test_main.cpp  test_stable_vec.hpp
src/utils/: APInt.hpp  SmallVec.hpp  Tracy.hpp  arena.cpp  arena.hpp  bitset.hpp  helpers.hpp  job_system.cpp  job_system.hpp  logging.cpp  logging.hpp  map.hpp  mutex.hpp  parameters.cpp  parameters.hpp  set.hpp  stable_vec.hpp  stable_vec_ref.hpp  stable_vec_slot.hpp  stats.hpp  string.hpp  timer.hpp  todo.cpp  todo.hpp  tracy.hpp  types.hpp  vec.hpp
src/x86_codegen/: backend.cpp  backend.hpp  backend2.cpp  backend3.cpp  backend3.hpp  backend3_instr_gen.cpp  backend3_instr_gen.hpp  backend3_print.cpp  backend3_print.hpp  builder.hpp  elf.hpp  instr.hpp
test/: .lit_test_times.txt  CMakeLists.txt  FileCheck  array.c  axpy.c  axpy.cTODO  axpy.cpp  binary_search.c  c_stdlib_exit.c  c_stdlib_puts.c  call.c  comp.c  constant_gep_global_init.c  data_relocation.c  double_loop.cpp  fib.c  float1.c  foreach_carray.c  foreach_carray.cpp  forloop.c  formilab_fbench.cpp  fp_to_ui.c  gcd.c  gcd_min.c  global.c  global_struct.c  idk.c  idk2.c  init.cpp  lambda.cpp  licm.c  linear_search.cpp  lit.cfg  lit.site.cfg.in  lit_test_formats.py  llvm_adobe_min_fabs.cpp  llvm_benchmark_gcc-loops.cpp  llvm_benchmarkgame_fannkuch.cpp  llvm_stanford_treesort.cpp  loop-5_min.c  (+41 more)
test/CppPerformanceBenchmarks/: absolute_value.cpp  atol.cpp  binary_search.cpp  bitarrays.cpp  byte_order.cpp  clock_time.cpp  complex_type.cpp  containers.cpp  convolution.cpp  convolution_box.cpp  count_sequence.cpp  ctype.cpp  custom_types.h  custom_types_loop_invariant.cpp  deinterleave.cpp  divide.cpp  exceptions.c  functionobjects.cpp  histogram.cpp  inner_product.cpp  interleave.cpp  iostreams.cpp  locales.cpp  logic_sequence.cpp  lookup_table.cpp  loop_fusion.cpp  loop_induction.cpp  loop_interchange.cpp  loop_normalize.cpp  loop_removal.cpp  loop_unroll.cpp  loop_unswitching.cpp  machine.cpp  mathlib.cpp  matrix_flip.cpp  matrix_multiply.cpp  matrix_vector_product.cpp  memcmp.cpp  memcpy.cpp  memmove.cpp  (+31 more)
test/coyoteBench/: almabench.c  fftbench.cpp  huffbench.c  lpbench.c
test/embench/: crc32.c  libedn.c  libhuffbench.c  libminver.c  libsichneu.c  libst.c  libstatemate.c  libud.c  libwikisort.c  matmult_int.c  md5.c  mont64.c  nbody.c  nettle_aes.c  nettle_sha256.c  primecount.c  tarfind.c
test/fujitsu_compiler_test_suite/: 0000_0058.cpp
test/gcc_torture_execute/: 20070212-1.c  alias-1.c  alias-2.c  alias-3.c  alias-4.c  anon-1.c  arith-1.c  cvt-1.c  enum-1.c  enum-2.c  loop-1.c  loop-10.c  loop-2.c  loop-2b.c  loop-3.c  loop-3b.c  loop-4.c  loop-4b.c  loop-5.c  loop-6.c  loop-7.c  loop-9.c  mod-1.c
test/llvm_benchmark_adobe_cpp/: functionobjects.cpp  loop_unroll.cpp  simple_types_constant_folding.cpp  stepanov_abstraction.cpp  stepanov_vector.cpp
(+127 files in other folders)
